initially fixed the margin problem with center text align

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -86,6 +86,7 @@ body {
     width: calc( 100% - 60px);
     padding-top: 10%;
     padding-bottom: 10%;
+    
   }
 .flex{
     display: flex;
@@ -167,10 +168,10 @@ span{
 
 #projects{
     background-color: oldlace; 
+    text-align: center;
 }
 
 #tiktag{
-margin-left: 50px;
 }
 #skills{
     background-color: rgb(2, 74, 83);
